# sutra

./: Cargo.toml  README.md  resume.md
.github/workflows/: release-dmg.yml
docs/: INTEGRATION.md
packaging/macos/: Info.plist  README.md  bundle.sh  make-icns.sh  sutra.entitlements
src/: gui.rs  main.rs  notifications.rs
