[package]
name = "sutra"
version = "0.1.4"
edition = "2024"
description = "Dev environment status dashboard — monitors a well-known state folder and renders unit state in a glanceable GUI or TUI with sounds, speech, and notifications"
license = "MIT OR Apache-2.0"
repository = "https://github.com/synestheticsystems/sutra"
homepage = "https://github.com/synestheticsystems/sutra"
keywords = ["dev-tools", "dashboard", "tui", "gui", "notifications"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
rust-version = "1.85"
exclude = ["resume.md", "create-test-envs.sh"]

[features]
default = ["tui", "gui"]
tui = ["dep:ratatui", "dep:crossterm"]
gui = ["dep:iced"]

[dependencies]
notify = "7"
dirs = "6"
nix = { version = "0.29", features = ["signal", "process"] }
clap = { version = "4", features = ["derive"] }

ratatui = { version = "0.29", optional = true }
crossterm = { version = "0.28", optional = true }
iced = { version = "0.13", features = ["tokio", "svg", "image"], optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
rodio = { version = "0.21", features = ["symphonia-aiff"] }
tts = "0.26"
mac-notification-sys = "0.6"
objc2 = "0.5"
objc2-foundation = { version = "0.2", features = ["NSData"] }
objc2-app-kit = { version = "0.2", features = ["NSApplication", "NSImage", "NSRunningApplication"] }
